# supercomp2.0

./: .gitignore  README.md  experimento.cpp  experimento.hpp  vec_log.cpp  vec_pow.cpp
aps1/: CMakeLists.txt  atividade_1.cc  vec_log.hpp  vec_pow.hpp
aps2/: main.cc  non_para.cc
aps2/part2/: main.cc
aps2/part4/: pi_mc_par1.cc  pi_mc_par2.cc  pi_mc_random.cc  random.cpp
projeto-02/: 2_opt.cc  CMakeLists.txt  Heuristic.cc  README.txt  relatorio.ipynb  resp_2  superlargetest.txt  teste1.txt  teste4.txt  tsp.cc
projeto-03/: 2_opt.cu  2_opt_gpu.cu  2_opt_para.cc  CMakeLists.txt  Makefile  heuristic.cc  largetest.txt  place.cpp  place.hpp  random_solver.cu  randow_solver.cu  relatorio.ipynb  superlargetest.txt  teste1.txt  teste2.txt  teste3.txt  tsp.cc
projeto-04/: 2_opt_gpu.cu  2_opt_mpi.cc  2_opt_para.cc  CMakeLists.txt  README.txt  large.txt  log.txt  place.hpp  projeto3.7z  projeto4.7z  relatorio.ipynb  superlargetest.txt  teste3.txt  teste5.txt  tsp.cc  tsp.py  tsp_mpi.cc
projeto1/: CMakeLists.txt  README.txt  complex_test_generator.py  final_test  main.cc  rand_test  relatorio.ipynb  square.cpp  square.hpp  teste1  true_test
